--- a/00-welcome-slides/welcome.lyx
+++ b/00-welcome-slides/welcome.lyx
@@ -1,7 +1,9 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
-\lyxformat 474
+#LyX 2.2 created this file. For more info see http://www.lyx.org/
+\lyxformat 508
 \begin_document
 \begin_header
+\save_transient_properties true
+\origin unavailable
 \textclass beamer
 \begin_preamble
 \usetheme{Madrid}
@@ -19,7 +21,7 @@
 \usenavigationsymbolstemplate{}
 % hide navigation symbols (bottom-right corner in every slide)
 
-%\titlegraphic{\includegraphics[height=2cm]{poul-logo.pdf}}
+\titlegraphic{\includegraphics[height=2cm]{extended.pdf}}
 % Aggiunge il logo del POuL in prima pagina
 % Ricordate che dovete sempre avere il logo in pdf nella cartella dove avete il documento (poul-logo.pdf)
 
@@ -61,16 +63,16 @@
 \language_package default
 \inputencoding auto
 \fontencoding global
-\font_roman default
-\font_sans default
-\font_typewriter default
-\font_math auto
+\font_roman "default" "default"
+\font_sans "default" "default"
+\font_typewriter "default" "default"
+\font_math "auto" "auto"
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100
-\font_tt_scale 100
+\font_sf_scale 100 100
+\font_tt_scale 100 100
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -209,12 +211,12 @@ Esercitazione
 \begin_inset Newline newline
 \end_inset
 
-03 Novembre 2016
+05 Ottobre 2017
 \begin_inset Argument 1
 status open
 
 \begin_layout Plain Layout
-03 Novembre 2016
+05 Ottobre 2017
 \end_layout
 
 \end_inset
@@ -283,7 +285,11 @@ c/o DEIB
 \end_layout
 
 \begin_layout Itemize
-sede Milano Leonardo, edificio 21, interno 9683
+sede Milano Leonardo, edificio 21, 1° piano, HEAP lab
+\end_layout
+
+\begin_layout Itemize
+tel interno 9683
 \end_layout
 
 \begin_layout Itemize
@@ -311,6 +317,28 @@ http://home.deib.polimi.it/cherubin/
 Se vi servo, scrivete una e-mail
 \end_layout
 
+\end_deeper
+\begin_layout Standard
+\begin_inset Separator plain
+\end_inset
+
+
+\end_layout
+
+\begin_layout Frame
+\begin_inset Argument 4
+status open
+
+\begin_layout Plain Layout
+Warning!
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
 \begin_layout Standard
 \begin_inset VSpace vfill
 \end_inset
@@ -349,8 +377,18 @@ NO
 \end_layout
 
 \end_deeper
+\begin_layout Standard
+\begin_inset VSpace vfill
+\end_inset
+
+
+\end_layout
+
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -389,7 +427,10 @@ Quanti di voi hanno intenzione di superare l'esame?
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -402,7 +443,7 @@ Durante il corso
 status open
 
 \begin_layout Plain Layout
-Quando cosa come perché
+Quando Cosa Come Perché
 \end_layout
 
 \end_inset
@@ -414,31 +455,39 @@ Quando cosa come perché
 \begin_layout Itemize
 
 \series bold
+Martedì mattina
+\series default
+ in B6.21 
+\begin_inset space \hfill{}
+\end_inset
+
+dalle 10.30 alle 12:15 
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
 Giovedì mattina
 \series default
- in LM1
+ in LM1 
+\begin_inset space \hfill{}
+\end_inset
+
+dalle 08.30 alle 11:15 
 \end_layout
 
-\begin_deeper
-\begin_layout Itemize
-dalle 8.30 alle 11:15 
-\end_layout
-
-\end_deeper
 \begin_layout Itemize
 
 \series bold
 Venerdì mattina
 \series default
- in BL.27.04
-\end_layout
+ in BL.27.04 
+\begin_inset space \hfill{}
+\end_inset
 
-\begin_deeper
-\begin_layout Itemize
 dalle 10:30 alle 13:15
 \end_layout
 
-\end_deeper
 \begin_layout Pause
 
 \end_layout
@@ -495,7 +544,10 @@ non di elencarvi i problemi e le possibili soluzioni che possono presentarvisi
 
 \end_deeper
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -558,7 +610,10 @@ conoscenza e capacità di rispettare lo standard in uso
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -641,7 +696,10 @@ questo gattino vi convincerà
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -702,7 +760,10 @@ non mi interessa
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -755,7 +816,10 @@ vim
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -783,7 +847,10 @@ clang
 
 \end_deeper
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -832,7 +899,10 @@ blocco note
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -864,7 +934,10 @@ CodeBlocks
 
 \end_deeper
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -895,7 +968,10 @@ RTFM
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
@@ -938,7 +1014,10 @@ Quando hai esaurito tutte le risorse sopra elencate, allora puoi mandarmi
 \end_layout
 
 \end_deeper
-\begin_layout Separator
+\begin_layout Standard
+\begin_inset Separator parbreak
+\end_inset
+
 
 \end_layout
 
